feat: Add activity images and styling for their timeline display.

--- a/index.html
+++ b/index.html
@@ -141,6 +141,12 @@
                             與使用者經驗設計之間的關係。探討生成式 AI 在當代數位產品中的應用前景，並解析 UX 設計師如何透過「語意建模」、「使用者意圖理解」與「交互場景設計」等方式，介入 AI
                             系統的建構與優化過程。
                         </p>
+                        <!-- Activity Photo Placeholder -->
+                        <div class="timeline-photo">
+                            <img src="assets/activities/activity-1.jpg" alt="領域驅動設計與UX設計師的角色貢獻 活動照片"
+                                class="activity-image">
+                            <p class="photo-caption">活動照片（待更新）</p>
+                        </div>
                         <div class="timeline-meta">
                             <span class="meta-tag">工作坊</span>
                             <span class="meta-tag">設計603</span>
@@ -163,6 +169,12 @@
                             RAG（Retrieval-Augmented Generation）、Fine-tuning、以及 AI Agent 的基本架構與運作方式。以資料分析場景為例，解析 Agent
                             工作流程的實作方式，並說明如何透過模組化的任務拆解、自主任務規劃與執行，實現具備決策能力的 AI 應用模型。
                         </p>
+                        <!-- Activity Photo Placeholder -->
+                        <div class="timeline-photo">
+                            <img src="assets/activities/activity-2.jpg" alt="LLM 的下一步？從 Agent 聊聊 Agentic AI 活動照片"
+                                class="activity-image">
+                            <p class="photo-caption">活動照片（待更新）</p>
+                        </div>
                         <div class="timeline-meta">
                             <span class="meta-tag">工作坊</span>
                             <span class="meta-tag">設計106</span>
@@ -185,6 +197,11 @@
                             Calling 機制，說明如何透過 LLM 與 API 的整合，使 Agent 能夠根據使用者意圖，自動完成特定任務。進一步延伸至 Multi-Agent 系統的設計，介紹
                             MCP（Model Context Protocol）協定，並說明多個 Agent 如何協同合作、分工執行不同任務。
                         </p>
+                        <!-- Activity Photo Placeholder -->
+                        <div class="timeline-photo">
+                            <img src="assets/activities/activity-3.jpg" alt="Agent 實作工作坊 活動照片" class="activity-image">
+                            <p class="photo-caption">活動照片（待更新）</p>
+                        </div>
                         <div class="timeline-meta">
                             <span class="meta-tag">工作坊</span>
                             <span class="meta-tag">設計603</span>
@@ -206,6 +223,12 @@
                             介紹「使用案例（Use Case）」、「使用者流程（User Flow）」與「領域故事敘述（Domain Storytelling）」等方法，並透過簡報與 Miro
                             白板協作，實際演練如何在多方協作中進行需求與流程的視覺化。學員分組進行領域故事敘述的實作，模擬真實專案情境，協同定義業務流程與使用者互動場景。強調實作與協作，讓學員在實際操作中體驗領域驅動設計的應用。
                         </p>
+                        <!-- Activity Photo Placeholder -->
+                        <div class="timeline-photo">
+                            <img src="assets/activities/activity-4.jpg" alt="領域驅動設計與UX設計師的角色貢獻工作坊 II 活動照片"
+                                class="activity-image">
+                            <p class="photo-caption">活動照片（待更新）</p>
+                        </div>
                         <div class="timeline-meta">
                             <span class="meta-tag">工作坊</span>
                             <span class="meta-tag">設計603</span>
@@ -228,6 +251,11 @@
                             Workflow，實現自動化任務處理。學習 Google Stitch，透過簡單的文字提示或圖像輸入，快速生成複雜的 UI 設計與前端程式碼，並將設計匯出至 Figma
                             進行進一步編輯。涵蓋 Google Firebase Studio 的應用，學習如何建立全端 AI 應用程式。
                         </p>
+                        <!-- Activity Photo Placeholder -->
+                        <div class="timeline-photo">
+                            <img src="assets/activities/activity-5.jpg" alt="Google AI 生態系 活動照片" class="activity-image">
+                            <p class="photo-caption">活動照片（待更新）</p>
+                        </div>
                         <div class="timeline-meta">
                             <span class="meta-tag">工作坊</span>
                             <span class="meta-tag">設計603</span>
@@ -249,6 +277,12 @@
                             生態系工具，應用於個人化平台的開發中。每位學員皆使用 Firebase Studio
                             建置自己的產品原型，完整呈現工作流程與功能。透過互動討論與意見交流，檢視彼此的學習成果，吸取不同的設計思路與技術應用方式。
                         </p>
+                        <!-- Activity Photo Placeholder -->
+                        <div class="timeline-photo">
+                            <img src="assets/activities/activity-6.jpg" alt="生成式AI 產品開發社群成果發表 活動照片"
+                                class="activity-image">
+                            <p class="photo-caption">活動照片（待更新）</p>
+                        </div>
                         <div class="timeline-meta">
                             <span class="meta-tag">成果發表</span>
                             <span class="meta-tag">設計603</span>
@@ -273,7 +307,7 @@
                     <div class="project-image">
                         <img src="assets/students/civitas-watch.jpg" alt="Civitas Watch - AI 輔助交通違規檢舉系統">
                         <div class="project-overlay">
-                            <a href="https://gamma.app/docs/Civitas-Watch--Idxu82cnhotvsuk" target="_blank"
+                            <a href="https://gamma.app/docs/Civitas-Watch--ldxu82cnhotvsuk" target="_blank"
                                 class="project-link">
                                 查看簡報
                                 <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
@@ -295,7 +329,8 @@
                     <div class="project-image">
                         <img src="assets/students/voteai.jpg" alt="VoteAI - AI-Assisted Vote Counting System">
                         <div class="project-overlay">
-                            <a href="https://gamma.app/docs/pznxikvrhsbwxb1" target="_blank" class="project-link">
+                            <a href="https://www.canva.com/design/DAGxv94n4rg/N_e2_0IJjJi06uvX-_SzIg/edit?utm_content=DAGxv94n4rg&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                                target="_blank" class="project-link">
                                 查看簡報
                                 <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                                     <path d="M6 3H3v10h10v-3M9 3h4v4M13 3L7 9" stroke="currentColor" stroke-width="2"
@@ -316,7 +351,8 @@
                     <div class="project-image">
                         <img src="assets/students/findfood.jpg" alt="FINDFOOD - AI Product Design">
                         <div class="project-overlay">
-                            <a href="https://ai-72xmedu.gamma.site/" target="_blank" class="project-link">
+                            <a href="https://www.canva.com/design/DAGxv5k_1Ag/dIEJL7E48bIW_sOq6s-LLA/view?utm_content=DAGxv5k_1Ag&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h612857a36c"
+                                target="_blank" class="project-link">
                                 查看簡報
                                 <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                                     <path d="M6 3H3v10h10v-3M9 3h4v4M13 3L7 9" stroke="currentColor" stroke-width="2"
@@ -339,8 +375,7 @@
                     <div class="project-image">
                         <img src="assets/students/heartfelt-picks.jpg" alt="Heartfelt Picks - 用AI幫你選出最適合的手搖飲">
                         <div class="project-overlay">
-                            <a href="https://www.canva.com/design/DAGxszW0014/17nNtkeh-tYQk8701dh4w/view?utm_content=DAGxszW0014&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlid=hebc7ff2b56"
-                                target="_blank" class="project-link">
+                            <a href="https://ai-72xmedu.gamma.site/" target="_blank" class="project-link">
                                 查看簡報
                                 <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                                     <path d="M6 3H3v10h10v-3M9 3h4v4M13 3L7 9" stroke="currentColor" stroke-width="2"
@@ -361,7 +396,7 @@
                     <div class="project-image">
                         <img src="assets/students/promptweaver.jpg" alt="PromptWeaver - 提示詞與結構化語意提示詞輸入平台">
                         <div class="project-overlay">
-                            <a href="https://www.canva.com/design/DAGxv5k_1Ag/dlEJL7E48bIW_sOq6s-LLA/view?utm_content=DAGxv5k_1Ag&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlid=h612857a36c"
+                            <a href="https://www.canva.com/design/DAGxwK6OHj4/nbV-O4CEGI0piUcTXAWj8Q/edit?utm_content=DAGxwK6OHj4&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
                                 target="_blank" class="project-link">
                                 查看簡報
                                 <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
@@ -383,7 +418,7 @@
                     <div class="project-image">
                         <img src="assets/students/lexipedia.jpg" alt="LexiPedia - Personal IELTS Vocabulary Builder">
                         <div class="project-overlay">
-                            <a href="https://gamma.app/docs/LexiPedia-m6j14j5qx/71u8b" target="_blank"
+                            <a href="https://gamma.app/docs/LexiPedia-m6j14j5qxl71u8b" target="_blank"
                                 class="project-link">
                                 查看簡報
                                 <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
@@ -428,8 +463,7 @@
                     <div class="project-image">
                         <img src="assets/students/bullshit-master.jpg" alt="Bullshit Master & 說故事大師">
                         <div class="project-overlay">
-                            <a href="https://www.canva.com/design/DAGxwK60Hj4/nbV-04CEGI0piUcTXAWj8Q/edit?utm_content=DAGxwK60Hj4&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
-                                target="_blank" class="project-link">
+                            <a href="https://gamma.app/docs/pznxikvrhsbwxb1" target="_blank" class="project-link">
                                 查看簡報
                                 <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                                     <path d="M6 3H3v10h10v-3M9 3h4v4M13 3L7 9" stroke="currentColor" stroke-width="2"
@@ -450,7 +484,7 @@
                     <div class="project-image">
                         <img src="assets/students/ideaforge.jpg" alt="IdeaForge - Making Concepts Work">
                         <div class="project-overlay">
-                            <a href="https://gamma.app/docs/IdeaForge-zviq5|sovf1ioet?mode=doc" target="_blank"
+                            <a href="https://gamma.app/docs/IdeaForge-zviq5lsovf1ioet?mode=doc" target="_blank"
                                 class="project-link">
                                 查看簡報
                                 <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
@@ -473,7 +507,7 @@
                     <div class="project-image">
                         <img src="assets/students/tesk-mapper.jpg" alt="Task Mapper - 代辦事項即時沉浸顯示器">
                         <div class="project-overlay">
-                            <a href="https://www.canva.com/design/DAGxv94n4rg/N_e2_OlJjJi06uvX-_Szlg/edit?utm_content=DAGxv94n4rg&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                            <a href="https://www.canva.com/design/DAGxszW0O14/l7nNtkeh_-tYQk8701dh4w/view?utm_content=DAGxszW0O14&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hebc7ff2b56"
                                 target="_blank" class="project-link">
                                 查看簡報
                                 <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
