新增講師陣容區塊：三位講師的圓形頭像、姓名與服務單位

--- a/index.html
+++ b/index.html
@@ -43,6 +43,41 @@
                         <span class="meta-value">設計學院工業設計系創新設計碩士班</span>
                     </div>
                 </div>
+
+                <!-- Instructors Section -->
+                <div class="hero-instructors">
+                    <h3 class="instructors-title">講師陣容</h3>
+                    <div class="instructors-grid">
+                        <div class="instructor-card">
+                            <div class="instructor-avatar">
+                                <img src="assets/instructors/instructor-1.jpg" alt="講師 1">
+                            </div>
+                            <div class="instructor-info">
+                                <h4 class="instructor-name">陳靜儀</h4>
+                                <p class="instructor-affiliation">北科大工業設計系專任助理教授</p>
+                            </div>
+                        </div>
+                        <div class="instructor-card">
+                            <div class="instructor-avatar">
+                                <img src="assets/instructors/instructor-2.jpg" alt="講師 2">
+                            </div>
+                            <div class="instructor-info">
+                                <h4 class="instructor-name">張維元</h4>
+                                <p class="instructor-affiliation">資料科學家的工作日常社群主持人</p>
+                            </div>
+                        </div>
+                        <div class="instructor-card">
+                            <div class="instructor-avatar">
+                                <img src="assets/instructors/instructor-3.jpg" alt="講師 3">
+                            </div>
+                            <div class="instructor-info">
+                                <h4 class="instructor-name">劉育維</h4>
+                                <p class="instructor-affiliation">APMIC MLOps 工程師</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <a href="#projects" class="cta-button">
                     <span>探索學生作品</span>
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
