更新視覺風格：依據海報設計更新色彩方案與點狀波浪背景動畫

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <body>
     <!-- Animated Background -->
     <div class="bg-animation">
-        <div class="orb orb-1"></div>
-        <div class="orb orb-2"></div>
-        <div class="orb orb-3"></div>
+        <div class="dot-wave"></div>
+        <div class="dot-wave"></div>
+        <div class="dot-wave"></div>
     </div>
 
     <!-- Hero Section -->
