增加流動的波浪型線條：SVG 虛線動畫增強背景層次

--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
         <div class="dot-wave"></div>
         <div class="dot-wave"></div>
         <div class="dot-wave"></div>
+
+        <!-- Flowing Wave Lines -->
+        <svg class="wave-lines" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 1080" preserveAspectRatio="none">
+            <path class="wave-line wave-line-1" d="M0,200 Q480,100 960,200 T1920,200" fill="none"
+                stroke="rgba(184,184,209,0.15)" stroke-width="2" />
+            <path class="wave-line wave-line-2" d="M0,400 Q480,300 960,400 T1920,400" fill="none"
+                stroke="rgba(168,197,221,0.12)" stroke-width="2" />
+            <path class="wave-line wave-line-3" d="M0,600 Q480,500 960,600 T1920,600" fill="none"
+                stroke="rgba(212,165,212,0.1)" stroke-width="2" />
+        </svg>
     </div>
 
     <!-- Hero Section -->
