更新文字：Highlight 學生作品區塊的實驗室名稱

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Agent 使用者經驗研究與產品開發 - 成果展示</title>
-    <meta name="description" content="國立臺北科技大學創新研究與技術發展成長社群 - AI Agent 使用者經驗研究與產品開發社群成果展示">
+    <meta name="description" content="國立臺北科技大學 研發部補助 創新研究與技術發展成長社群 - AI Agent 使用者經驗研究與產品開發社群成果展示">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -328,7 +328,8 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">學生作品</h2>
-                <p class="section-subtitle">10 個創新的 AI 產品原型</p>
+                <p class="section-subtitle">10 位北科大創新設計碩士班<span class="text-highlight">脈絡設計研究室 (O.P.E.N. Lab)</span> 的創意
+                    AI 產品原型</p>
             </div>
             <div class="projects-grid">
                 <!-- Project 1: Civitas Watch -->
