內容更新：新增歌詞中文翻譯

--- a/index.html
+++ b/index.html
@@ -620,41 +620,78 @@
         </div>
         <div class="lyrics-content">
             <p>Pencil to paper the first line’s a spark<br>
+                <span class="zh-lyrics">筆尖觸紙，首句如星火</span>
                 Shadows and colors painting the dark<br>
+                <span class="zh-lyrics">光影與色彩，繪染著黑暗</span>
                 A thousand ideas swirling<br>
+                <span class="zh-lyrics">千萬個點子盤旋</span>
                 Flying<br>
-                Unchained</p>
+                <span class="zh-lyrics">飛舞</span>
+                Unchained<br>
+                <span class="zh-lyrics">掙脫束縛</span>
+            </p>
 
             <p>What if we fail<br>
+                <span class="zh-lyrics">若我們失敗</span>
                 What if we fall<br>
+                <span class="zh-lyrics">若我們跌倒</span>
                 But what if we rise<br>
-                Higher than it all</p>
+                <span class="zh-lyrics">但若我們升起</span>
+                Higher than it all<br>
+                <span class="zh-lyrics">超越這一切</span>
+            </p>
 
             <p class="chorus">Dreams in motion<br>
+                <span class="zh-lyrics">夢想在流動</span>
                 Hearts collide<br>
+                <span class="zh-lyrics">心靈在碰撞</span>
                 Together we’ll light up the sky<br>
+                <span class="zh-lyrics">我們將一同點亮天際</span>
                 Step by step<br>
+                <span class="zh-lyrics">一步接一步</span>
                 Let’s make it real<br>
+                <span class="zh-lyrics">讓它成真</span>
                 This is the moment<br>
-                This is the deal</p>
+                <span class="zh-lyrics">就是這一刻</span>
+                This is the deal<br>
+                <span class="zh-lyrics">這是我們的約定</span>
+            </p>
 
             <p>Blueprints are messy but they’ve got soul<br>
+                <span class="zh-lyrics">藍圖雖亂，卻有靈魂</span>
                 Hands covered in paint<br>
+                <span class="zh-lyrics">雙手沾滿顏料</span>
                 We’re losing control<br>
+                <span class="zh-lyrics">我們失去控制</span>
                 Laughing and shouting<br>
-                We’re breaking the rules</p>
+                <span class="zh-lyrics">歡笑與吶喊</span>
+                We’re breaking the rules<br>
+                <span class="zh-lyrics">我們打破規則</span>
+            </p>
 
             <p>What if we doubt<br>
+                <span class="zh-lyrics">若我們懷疑</span>
                 What if we fear<br>
-                But what if the answer’s already here</p>
+                <span class="zh-lyrics">若我們恐懼</span>
+                But what if the answer’s already here<br>
+                <span class="zh-lyrics">但若答案早已在此</span>
+            </p>
 
             <p class="chorus">Dreams in motion<br>
+                <span class="zh-lyrics">夢想在流動</span>
                 Hearts collide<br>
+                <span class="zh-lyrics">心靈在碰撞</span>
                 Together we’ll light up the sky<br>
+                <span class="zh-lyrics">我們將一同點亮天際</span>
                 Step by step<br>
+                <span class="zh-lyrics">一步接一步</span>
                 Let’s make it real<br>
+                <span class="zh-lyrics">讓它成真</span>
                 This is the moment<br>
-                This is the deal</p>
+                <span class="zh-lyrics">就是這一刻</span>
+                This is the deal<br>
+                <span class="zh-lyrics">這是我們的約定</span>
+            </p>
         </div>
     </div>
 
