內容更新：在活動歷程中加入講師姓名

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
                     <div class="timeline-content">
                         <div class="timeline-date">2025.07.14</div>
                         <h3 class="timeline-title">領域驅動設計與UX設計師的角色貢獻</h3>
+                        <p class="timeline-instructor">講師：陳靜儀</p>
                         <p class="timeline-description">
                             以「領域驅動設計（Domain-Driven Design, DDD）」與 UX 設計師在生成式 AI 發展中的角色為核心，透過講座與概念導入，引導參與者重新思考 AI
                             與使用者經驗設計之間的關係。探討生成式 AI 在當代數位產品中的應用前景，並解析 UX 設計師如何透過「語意建模」、「使用者意圖理解」與「交互場景設計」等方式，介入 AI
@@ -203,6 +204,7 @@
                     <div class="timeline-content">
                         <div class="timeline-date">2025.07.15</div>
                         <h3 class="timeline-title">LLM 的下一步？從 Agent 聊聊 Agentic AI</h3>
+                        <p class="timeline-instructor">講師：張維元</p>
                         <p class="timeline-description">
                             聚焦於大型語言模型（LLM）技術的最新發展趨勢，深入探討「Agent」與「Agentic AI」的概念與應用。介紹 LLM 技術的演進脈絡，涵蓋
                             RAG（Retrieval-Augmented Generation）、Fine-tuning、以及 AI Agent 的基本架構與運作方式。以資料分析場景為例，解析 Agent
@@ -230,6 +232,7 @@
                     <div class="timeline-content">
                         <div class="timeline-date">2025.07.22 上午</div>
                         <h3 class="timeline-title">Agent 實作工作坊</h3>
+                        <p class="timeline-instructor">講師：張維元</p>
                         <p class="timeline-description">
                             延續前一場講座的實作工作坊，聚焦於 AI Agent 的開發與應用技術。從開發環境的建立開始，帶領學員操作 Vibe Coding 平台，進行環境安裝與設定。深入講解 Function
                             Calling 機制，說明如何透過 LLM 與 API 的整合，使 Agent 能夠根據使用者意圖，自動完成特定任務。進一步延伸至 Multi-Agent 系統的設計，介紹
@@ -256,6 +259,7 @@
                     <div class="timeline-content">
                         <div class="timeline-date">2025.07.22 下午</div>
                         <h3 class="timeline-title">領域驅動設計與UX設計師的角色貢獻工作坊 II</h3>
+                        <p class="timeline-instructor">講師：陳靜儀</p>
                         <p class="timeline-description">
                             介紹「使用案例（Use Case）」、「使用者流程（User Flow）」與「領域故事敘述（Domain Storytelling）」等方法，並透過簡報與 Miro
                             白板協作，實際演練如何在多方協作中進行需求與流程的視覺化。學員分組進行領域故事敘述的實作，模擬真實專案情境，協同定義業務流程與使用者互動場景。強調實作與協作，讓學員在實際操作中體驗領域驅動設計的應用。
@@ -282,6 +286,7 @@
                     <div class="timeline-content">
                         <div class="timeline-date">2025.08.17</div>
                         <h3 class="timeline-title">Google AI 生態系</h3>
+                        <p class="timeline-instructor">講師：劉育維</p>
                         <p class="timeline-description">
                             深入介紹 Google 的 AI 技術與生態系，實作多項無需撰寫程式碼的自動化工作流程。介紹 Google 的 AI Agent 概念，示範如何建立 Agentic AI
                             Workflow，實現自動化任務處理。學習 Google Stitch，透過簡單的文字提示或圖像輸入，快速生成複雜的 UI 設計與前端程式碼，並將設計匯出至 Figma
@@ -307,6 +312,7 @@
                     <div class="timeline-content">
                         <div class="timeline-date">2025.09.02</div>
                         <h3 class="timeline-title">生成式AI 產品開發社群成果發表</h3>
+                        <p class="timeline-instructor">主持人：陳靜儀</p>
                         <p class="timeline-description">
                             學員實作成果的展示與交流，作為整個系列工作坊的總結與驗收。學員將過去五場工作坊中所學的知識與技能，特別是生成式 AI、Agent 系統、領域驅動設計與 Google AI
                             生態系工具，應用於個人化平台的開發中。每位學員皆使用 Firebase Studio
@@ -620,9 +626,9 @@
         </div>
         <div class="lyrics-content">
             <p>Pencil to paper the first line’s a spark<br>
-                <span class="zh-lyrics">筆尖觸紙，首句如星火</span>
+                <span class="zh-lyrics">筆尖接觸紙上的剎那如點燃星火</span>
                 Shadows and colors painting the dark<br>
-                <span class="zh-lyrics">光影與色彩，繪染著黑暗</span>
+                <span class="zh-lyrics">光影與色彩繪染著黑暗</span>
                 A thousand ideas swirling<br>
                 <span class="zh-lyrics">千萬個點子盤旋</span>
                 Flying<br>
