視覺優化：增強背景光影視差效果與修復手機版標題顯示

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 </head>
 
 <body>
+    <!-- Cursor Glow Effect -->
+    <div class="cursor-glow"></div>
+
     <!-- Animated Background -->
     <div class="bg-animation">
         <div class="dot-wave"></div>
@@ -34,7 +37,7 @@
                 <div class="hero-badge">2025 成果發表</div>
                 <h1 class="hero-title">
                     <span class="gradient-text">AI Agent</span><br>
-                    <span class="nowrap">使用者經驗研究與產品開發</span>
+                    <span>使用者經驗研究與產品開發</span>
                 </h1>
                 <p class="hero-subtitle">國立臺北科技大學創新研究與技術發展成長社群</p>
                 <div class="hero-meta">
