內容更新：新增社群成果區塊與團體照

--- a/index.html
+++ b/index.html
@@ -568,6 +568,24 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Community Achievements Section -->
+            <div class="achievements-section">
+                <div class="achievements-content">
+                    <div class="achievements-text">
+                        <h3 class="achievements-title">本社群成果</h3>
+                        <p>除了順利誕生 10 個小型 AI 產品原型，展現跨領域學員在短時間內的高速學習能力外，更有 2 位學員成功通過 iPAS「AI
+                            應用規劃師（初級）」檢定（共有七位報考），以實力證明了持續精進的專業態度。</p>
+                        <p>同時，社群能量也成功延伸到國際舞台。教師陳靜儀將工作坊的重要成果整理為研究論文，成功投稿至 2026 AEIT（Advances in Education and Information
+                            Technology）國際研討會，並將於 2026 年 1 月 23–25 日於日本札幌進行口頭發表。</p>
+                        <p class="paper-title">論文題為：<em>Teaching UX Evaluation for AI Products: A Reflective Workshop
+                                Framework for Design Education</em>（AI產品使用者體驗評估教學：設計教育中的反思式工作坊框架）。</p>
+                    </div>
+                    <div class="achievements-photo">
+                        <img src="assets/group-photo.jpg" alt="社群成員團體照">
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -581,7 +599,7 @@
                     <p>設計學院 工業設計系 創新設計碩士班</p>
                 </div>
                 <div class="footer-meta">
-                    <p>網頁設計：陳靜儀</p>
+                    <p>設計創意：陳靜儀</p>
                     <p>網頁技術：Google Antigravity</p>
                     <p>背景音樂：SUNO (Dream in Motion)</p>
                 </div>
