--- a/index.html
+++ b/index.html
@@ -599,9 +599,9 @@
                     <p>設計學院 工業設計系 創新設計碩士班</p>
                 </div>
                 <div class="footer-meta">
-                    <p>設計創意：陳靜儀</p>
+                    <p>工作坊主題規劃/本網頁設計創意：陳靜儀</p>
                     <p>網頁技術：Google Antigravity</p>
-                    <p>背景音樂：SUNO (Dream in Motion)</p>
+                    <p>背景音樂：SUNO (曲名：Dream in Motion)</p>
                 </div>
             </div>
             <div class="footer-bottom">
