feat: add hero instructors section with styling and update activity images

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                         </div>
                     </div>
                     <div class="project-info">
-                        <h3 class="project-title">Bullshit Master & 說故事大師</h3>
+                        <h3 class="project-title">Bullshit Master說故事大師</h3>
                         <p class="project-author">劉承璟</p>
                         <p class="project-description">替你思考社群貼文案。自動生成文案圖片文案與說故事語音故事，客製化語調長短與自由編輯，輕鬆下載文案與圖文卡片。</p>
                     </div>
